--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Drum Grid Editor</title>
+  <title>Drum Grid Editor coucou</title>
   <style>
     body { font-family: sans-serif; background: #111; color: white; margin: 0; padding: 1rem; }
     #toolbar { margin-bottom: 1rem; }
