--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,33 @@
-<input type="file" id="audio-upload" accept="audio/*">
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <title>Drum to MIDI</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-900 text-white font-sans min-h-screen flex flex-col items-center justify-center p-6">
+    <canvas id="stars-bg" class="fixed top-0 left-0 w-full h-full z-[-1]"></canvas>
+  <h1 class="text-3xl font-bold mb-6">Upload Audio File</h1>
+
+  <!-- Bouton de sélection audio -->
+  <label for="audio-upload" class="cursor-pointer bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded shadow-md transition">
+    📂 Sélectionner un fichier audio
+  </label>
+  <input type="file" id="audio-upload" accept="audio/*" hidden>
+
+  <!-- Nom du fichier sélectionné -->
+  <span id="filename" class="mt-4 text-sm text-gray-300 italic"></span>
+
+  <!-- Lecteur audio (sera visible après sélection) -->
+  <audio id="audio-player" controls class="mt-4 w-full max-w-md hidden"></audio>
+
+  <!-- Indicateur de chargement -->
+  <div id="loader" class="mt-4 hidden text-sm text-blue-400 animate-pulse">
+    ⏳ Traitement en cours...
+  </div>
+
+  <script src="script.js"></script>
+  <script src="stars.js"></script>
+</body>
+
+</html>
